<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="20dp"
    tools:context=".CourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "vertical"
    >
        <TextView
            android:id = "@+id/course_title"
            style = "@style/CourseText"
            android:layout_marginHorizontal = "24dp"
            android:layout_marginTop= "20dp"
            android:textSize = "32sp"
            android:textStyle = "bold"
            android:text = "@string/course_template"/>


        <TextView
            android:id = "@+id/course_credits"
            style = "@style/CourseText"
            android:layout_marginHorizontal = "24dp"
            android:layout_marginBottom = "20dp"
            android:layout_marginTop = "4dp"
            android:textSize = "16sp"
            android:textStyle = "bold"
            android:textColor = "#348feb"
            android:text = "@string/credits"/>

        <ImageView
            android:id = "@+id/course_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds = "true"
            tools:src = "@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/course_desc"
            style="@style/CourseText.Small"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="20dp"
            android:text="@string/lorem_ipsum"
        />

        <LinearLayout
            android:id = "@+id/course_buttons"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginHorizontal= "24dp"
            android:orientation = "horizontal"
        >
            <Button
                android:id = "@+id/enroll_button"
                style="@style/ButtonGeneral"
                android:layout_marginHorizontal="4sp"
                android:layout_weight = "1"
                android:text = "@string/enroll"/>

            <Button
                android:id = "@+id/bookmark_button"
                style = "@style/ButtonGeneral"
                android:layout_weight = "1.5"
                android:text = "@string/bookmark"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>